# actix-web-sample

./: .env  Cargo.toml  Makefile
src/: main.rs
src/handlers/: get.rs
src/models/: common.rs  hello_world.rs
