[package]
name = "actix-web-sample"
version = "0.1.0"
authors = ["moisutsu <moisutsu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
dotenv = "0.15.0"
env_logger = "0.7.1"
anyhow = "1.0.32"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
